[package]
name = "nickwb_advent"
version = "0.1.0"
authors = ["Nick Young <nick.young@stacktracehq.com>"]
edition = "2018"
default-run = "runall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
rayon = "1.4.0"
num = "0.2"