[package]
name = "nickwb_advent_2020"
version = "0.1.0"
authors = ["Nick Young <nick@nickwb.net>"]
edition = "2018"
default-run = "runall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
rayon = "1.5.0"
num = "0.2"
itertools = "0.9.0"