[package]
name = "nickwb_advent_2020"
version = "0.1.0"
authors = ["Nick Young <nick@nickwb.net>"]
edition = "2018"
default-run = "runall"

[features]
default = []
slow_problems = []

[dependencies]
regex = "1.6.0"
lazy_static = "1.4.0"
rayon = "1.6.1"
num = "0.4.0"
itertools = "0.10.3"
nom = "7.1.1"
once_cell = "1.16.0"
bitvec = "1.0.1"
slotmap = "1.0.6"